--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,34 @@
-.App {
+.app {
   width: 960px;
   display: block;
   margin: 0 auto;
 }
 
-#sidebar_left {
-  width: 299px;
-  float: left;
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
-#main_content {
-  width: 661px;
-  float: left;
+.task {
 }
 
-#main_content ul li span {
-  display: block;
+ul li ul {
+  display: table;
 }
 
-#main_content ul li span:last-child {
-  margin-bottom: 8px;
-  font-weight: bold;
-  color: grey;
+.label {
   font-size: 12px;
+}
+
+.label li {
+  float: left;
+  padding: 1px 4px;
+  border: 1px solid gray;
+}
+
+.project {
+}
+
+.created {
 }
