--- a/src/App.css
+++ b/src/App.css
@@ -221,6 +221,17 @@ button {
 }
 
 .input-project-selector {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--base);
+  background-color: var(--athens-gray);
+  border: none;
+  width: 100%;
+  padding: 0px 8px;
+  border-radius: 4px;
+  position: relative;
+  left: -8px;
 }
 
 .input-project-selector:after {
@@ -425,26 +436,6 @@ Item task
   margin: 0 0 0 0;
 }
 
-.task-item-editmode {
-  padding: 8px 0;
-  margin-left: 36px;
-  display: flex;
-}
-
-.inline-task-edit {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: var(--base);
-  background-color: var(--athens-gray);
-  border: none;
-  width: 100%;
-  padding: 0px 8px;
-  border-radius: 4px;
-  position: relative;
-  left: -8px;
-}
-
 .checker {
   display: inline-block;
 }
@@ -463,7 +454,7 @@ Item task
   cursor: pointer;
   margin-right: 16px;
   outline: none;
-  top: 8px;
+  top: 5px;
   padding: 0px;
 }
 
@@ -529,44 +520,53 @@ Strikethrough animation
 }
 
 .task-item {
-  position: relative;
-  /* padding-bottom: 24px; */
-  /* margin-bottom: 16px; */
+  display: flex;
   border-bottom: 1px solid var(--athens-gray);
+  padding: 0 0 8px 0;
 }
 
 .task-item:last-child {
   margin-bottom: 48px;
 }
 
-.task-actions {
+.task-actions > div {
   display: flex;
-  position: absolute;
-  right: 4px;
-  top: 0;
-  cursor: pointer;
 }
 
 .task-details {
   display: flex;
+  flex-grow: 1;
 }
 
-/* .task-details > div {
+.task-item-editmode {
+  padding: 8px 0;
+  margin-left: 36px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: baseline;
-  align-content: stretch;
-} */
+}
 
+.inline-task-edit {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--base);
+  background-color: var(--athens-gray);
+  border: none;
+  width: 100%;
+  padding: 0px 8px;
+  border-radius: 4px;
+  position: relative;
+  left: -8px;
+}
+
+.task-actions {
+  display: flex;
+}
 .task-content {
-  display: inline-block;
+  display: flex;
   flex-grow: 1;
 }
 .task-content span {
-  /* margin-bottom: 4px; */
-  display: inline-block;
+  padding: 7px 0 0 0;
 }
 
 .task-content-bottom {
@@ -580,7 +580,7 @@ Strikethrough animation
   padding: 4px 4px;
   /* background-color: rgba(138, 43, 226, 0.2); */
   border-radius: 100px;
-  display: table;
+  align-self: center;
 }
 
 .task-content-project {
@@ -591,7 +591,7 @@ Strikethrough animation
   padding: 4px 4px;
   /* background-color: rgba(138, 43, 226, 0.2); */
   border-radius: 100px;
-  display: table;
+  align-self: center;
 }
 
 .task-action-menu {
